<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.github.yonodera</groupId>
        <artifactId>dbunit-cli-parent</artifactId>
        <version>1.1-SNAPSHOT</version>
    </parent>
    <artifactId>dbunit-cli</artifactId>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <exclude.testcase>IntegrationTest</exclude.testcase>
    </properties>
    <profiles>
        <profile>
            <id>IntegrationTest</id>
            <properties>
                <exclude.testcase></exclude.testcase>
            </properties>
        </profile>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>0.10.0</version>
                        <extensions>true</extensions>
                        <executions>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <mainClass>yo.dbunitcli.application.Parameterize</mainClass>
                            <imageName>dbunit-cli</imageName>
                            <fallback>false</fallback>
                            <buildArgs>
                                -J-Dfile.encoding=MS932
                                -H:+AddAllCharsets
                                -H:+UnlockExperimentalVMOptions
                                -H:ReflectionConfigurationFiles=${project.resources[0].directory}/META-INF/native-image/${project.groupId}/${project.artifactId}/reflect-config.json
                                -H:ResourceConfigurationFiles=${project.resources[0].directory}/META-INF/native-image/${project.groupId}/${project.artifactId}/resource-config.json
                                -H:JNIConfigurationFiles=${project.resources[0].directory}/META-INF/native-image/${project.groupId}/${project.artifactId}/jni-config.json
                                -H:SerializationConfigurationFiles=${project.resources[0].directory}/META-INF/native-image/${project.groupId}/${project.artifactId}/serialization-config.json
                                --initialize-at-build-time=oracle.sql.converter.I18CharacterConvertersWrapper
                                --initialize-at-build-time=oracle.sql.converter.I18CharacterConvertersWrapper
                                --initialize-at-build-time=oracle.i18n.text.OraCharsetWithConverter
                                --initialize-at-build-time=oracle.i18n.text.converter.CharacterConverter1Byte
                                --initialize-at-build-time=oracle.i18n.text.OraCharsetAL16UTF16
                                --initialize-at-build-time=oracle.i18n.text.OraCharsetAL32UTF8
                                --initialize-at-build-time=oracle.i18n.text.OraCharsetUTF
                                --initialize-at-build-time=oracle.i18n.text.OraCharsetUTFE
                                --initialize-at-build-time=oracle.i18n.text.converter.CharacterConverterGB18030
                                --initialize-at-build-time=oracle.i18n.text.converter.CharacterConverterGBK
                                --initialize-at-build-time=oracle.i18n.text.converter.CharacterConverterJAEUC
                                --initialize-at-build-time=oracle.i18n.text.converter.CharacterConverterShift
                                --initialize-at-build-time=oracle.i18n.text.converter.CharacterConverterZHTEUC
                                --strict-image-heap
                            </buildArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>native-trace</id>
            <properties>
                <exclude.testcase>jvmTest</exclude.testcase>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>0.10.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <agent>
                                <enabled>true</enabled>
                                <options>
                                    <accessFilterFiles>
                                        <filterFile>${project.basedir}/access-filter.json</filterFile>
                                    </accessFilterFiles>
                                </options>
                                <metadataCopy>
                                    <disabledStages>
                                        <stage>main</stage>
                                    </disabledStages>
                                    <merge>true</merge>
                                    <outputDirectory>${project.resources[0].directory}/META-INF/native-image/${project.groupId}/${project.artifactId}</outputDirectory>
                                </metadataCopy>
                            </agent>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.properties</include>
                    <include>**/*.txt</include>
                    <include>**/*.stg</include>
                    <include>**/*.xml</include>
                    <include>**/*.scmo</include>
                </includes>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <excludes>
                    <exclude>**/*.txt</exclude>
                    <exclude>**/*.json</exclude>
                    <exclude>**/*.csv</exclude>
                    <exclude>**/*.tsv</exclude>
                    <exclude>**/*.xls</exclude>
                    <exclude>**/*.xlsx</exclude>
                    <exclude>**/*.png</exclude>
                    <exclude>**/*.pdf</exclude>
                </excludes>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <release>21</release>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>info.picocli</groupId>
                            <artifactId>picocli-codegen</artifactId>
                            <version>4.7.6</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <!-- Restrict execution of source compilation to install or deploy. -->
                        <!-- The default is package. -->
                        <phase>install</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                        <exclude>META-INF/versions/**/module-info.class</exclude>
                                        <exclude>META-INF/DEPENDENCIES</exclude>
                                        <exclude>LICENSE</exclude>
                                        <exclude>module-info.class</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>jar-with-dependencies</shadedClassifierName>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>yo.dbunitcli.application.Parameterize</mainClass>
                                    <manifestEntries>
                                        <Multi-Release>true</Multi-Release>
                                    </manifestEntries>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
                                    <resource>META-INF/native-image/reflect-config.json</resource>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
                                    <resource>META-INF/native-image/resource-config.json</resource>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer"/>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
                                    <addHeader>false</addHeader>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>